@startuml
entity "users" as Users {
    + ID : int [PK]
    --
    Nombre : string
    Apellido : string
    Email : string [unique, not null]
    Contraseña : string [not null]
    Rol : string [not null] <<enum: ROLE_ADMIN, ROLE_USER>>
    ImagenPerfil : string
    FechaRegistro : localdatetime [not null]
    UltimoLogin : localdatetime
}

entity "flights" as Flights {
    + ID : int [PK]
    --
    CodigoVuelo : string [unique, not null]
    RutaID : int [FK -> Routes.ID, not null]
    FechaHoraSalida : localdatetime [not null]
    FechaHoraLlegada : localdatetime [not null]
    CapacidadTotal : int [not null]
    PlazasDisponibles : int [not null]
    Precio : decimal [not null]
    Estado : boolean [not null] <<default: true>>
}

entity "reservations" as Reservations {
    + ID : int [PK]
    --
    UsuarioID : int [FK -> Users.ID, not null]
    VueloID : int [FK -> Flights.ID, not null]
    NumeroPlazasReservadas : int [not null]
    FechaReserva : datetime [not null]
    MetodoPago : string
    CodigoConfirmacion : string [unique, not null]
    Estado : string [not null] <<enum: Pendiente, Confirmada, Cancelada>>
}

entity "airports" as Airports {
    + ID : int [PK]
    --
    NombreAeropuerto : string [not null]
    Codigo : string [unique, not null]
    Ciudad : string [not null]
    Pais : string [not null]
}

entity "routes" as Routes {
    + ID : int [PK]
    --
    AeropuertoOrigenID : long [FK -> Airports.ID, not null]
    AeropuertoDestinoID : long [FK -> Airports.ID, not null]
    DuracionEstimada : int [not null]
    Frecuencia : string [not null] <<enum: Diaria, Semanal, Mensual>>
    Activo : boolean [not null] <<default: true>>
}

' Relationships
Users ||--o{ Reservations : "1 a muchos"
Flights ||--o{ Reservations : "1 a muchos"
Routes ||--o{ Flights : "1 a muchos"
Airports ||--o{ Routes : "1 a muchos (Origen)"
Airports ||--o{ Routes : "1 a muchos (Destino)"
@enduml

